// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render argument 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)>
      Foo
    </Styled(Name)>
    :
  </span>
  <Styled(Type)>
    Array
  </Styled(Type)>
   — 
  <Markdown
    inline={true}
    text="Converts foo to bar"
  />
</Group>
`;

exports[`should render argument without description 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)>
      Foo
    </Styled(Name)>
    :
  </span>
  <Styled(Type)>
    Array
  </Styled(Type)>
</Group>
`;

exports[`should render argument without type 1`] = `
<Group
  separator=" "
>
  <span>
    <Styled(Name)>
      Foo
    </Styled(Name)>
  </span>
  <Markdown
    inline={true}
    text="Converts foo to bar"
  />
</Group>
`;

exports[`should render return value 1`] = `
<Group
  separator=" "
>
  Returns
  <Styled(Type)>
    Array
  </Styled(Type)>
   — 
  <Markdown
    inline={true}
    text="Converts foo to bar"
  />
</Group>
`;

exports[`should render with block styles 1`] = `
<Group
  className="block"
  separator=" "
/>
`;
